# Texas-Hold-em

./: CMakeLists.txt  README.md  main.c
Inc/: Card_basic.h  EvaluateHand.h  combineHand.h  common.h  dealHands.h  initializeDeck.h  shuffleDeck.h  sortAndStoreHand.h
Src/: EvaluateHand.c  combineHand.c  dealHands.c  initializeDeck.c  shuffleDeck.c  sortAndStoreHand.c
